# bintex

./: .gitignore  Cargo.toml  README.md  sample.tex
.github/workflows/: main.yml
bintex-derive/: Cargo.toml
bintex-derive/src/: lib.rs
src/: attributes.rs  lib.rs  main.rs  prelude.rs
tests/: test.rs
