[package]
name = "bintex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "bintex-derive"
]

[dependencies]
darling = "0.13.0"
bintex_derive = { version = "^0.1.0", path = "bintex-derive"}

