[package]
name = "bintex_derive"
version = "0.1.0"
edition = "2021"
description = "Create bitfield LaTeX diagrams with the use of the deku library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wcampbell0x2a/bintex"

[lib]
proc-macro = true

[dependencies]
deku = "0.16.0"
syn = "2.0"
darling = "0.20.8"
proc-macro2 = "1.0"
quote = "1.0"
